<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/raffleImageImageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/raffle_image" />

    <TextView
        android:id="@+id/raffleDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingEnd="16dp"
        android:text="@string/raffle_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/raffleImageImageView" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerConstraintLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/containerConstraintLayout2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/raffleDescriptionTextView">

        <ImageView
            android:id="@+id/iconTimeImageView"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/icon_image" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:text="@string/time_desc"
            app:layout_constraintBottom_toBottomOf="@+id/iconTimeImageView"
            app:layout_constraintStart_toEndOf="@+id/iconTimeImageView"
            app:layout_constraintTop_toTopOf="@+id/iconTimeImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerConstraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/containerConstraintLayout1"
        app:layout_constraintEnd_toStartOf="@+id/containerConstraintLayout3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/containerConstraintLayout1"
        app:layout_constraintTop_toTopOf="@+id/containerConstraintLayout1">

        <ImageView
            android:id="@+id/iconGiftImageView"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/icon_gift" />

        <TextView
            android:id="@+id/giftTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:text="@string/gift_desc"
            app:layout_constraintBottom_toBottomOf="@+id/iconGiftImageView"
            app:layout_constraintStart_toEndOf="@+id/iconGiftImageView"
            app:layout_constraintTop_toTopOf="@+id/iconGiftImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerConstraintLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/containerConstraintLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/containerConstraintLayout2"
        app:layout_constraintTop_toTopOf="@+id/containerConstraintLayout1">

        <ImageView
            android:id="@+id/iconPriceImageView"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/icon_price" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:text="@string/price_desc"
            app:layout_constraintBottom_toBottomOf="@+id/iconPriceImageView"
            app:layout_constraintStart_toEndOf="@+id/iconPriceImageView"
            app:layout_constraintTop_toTopOf="@+id/iconPriceImageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>